<resources>
    <string name="app_name">FifteenPuzzle</string>
    <string name="fifteen_puzzle_main_menu_text">Fifteen Puzzle</string>
    <string name="start_game_button">Start Game</string>
    <string name="leaderboards_button">Leaderboards</string>
    <string name="exit_game_button">Exit Game</string>
    <string name="_5x5_puzzle_text">5x5 puzzle</string>
    <string name="_4x4_puzzle_text">4x4 puzzle</string>
    <string name="_3x3_puzzle_text">3x3 puzzle</string>
    <string name="timer_text">Timer</string>
    <string name="your_result_text">Your result</string>
    <string name="submit_record_button">Submit record</string>
    <string name="cancel_button">Cancel</string>
    <string name="_3x3">3x3</string>
    <string name="_5x5">5x5</string>
    <string name="_4x4">4x4</string>
</resources>