<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_manu_texture"
    tools:context=".activity.MainMenuActivity">

    <TextView
        android:id="@+id/main_menu_text"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:text="@string/fifteen_puzzle_main_menu_text"
        android:textAlignment="center"
        android:background="@drawable/border_rectangle_radius"
        android:textColor="#DD000000"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border_rectangle_radius"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/main_menu_start_game_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_text">

        <RadioButton
            android:id="@+id/x_3_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/_3x3_puzzle_text"
            android:textAlignment="center"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/x_4_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:checked="true"
            android:text="@string/_4x4_puzzle_text"
            android:textAlignment="center"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/x_5_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/_5x5_puzzle_text"
            android:textAlignment="center"
            android:textSize="25sp" />
    </RadioGroup>

    <Button
        android:id="@+id/main_menu_start_game_button"
        android:backgroundTint="@android:color/holo_green_light"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="200dp"
        android:text="@string/start_game_button"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_text" />

    <Button
        android:id="@+id/main_menu_leaderboards_button"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:text="@string/leaderboards_button"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_start_game_button" />

    <Button
        android:id="@+id/main_menu_exit_button"
        android:backgroundTint="@android:color/holo_red_light"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:text="@string/exit_game_button"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_leaderboards_button" />

</androidx.constraintlayout.widget.ConstraintLayout>