<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_manu_texture"
    tools:context=".activity.LeaderboardsActivity">

    <Button
        android:id="@+id/leaderboard_3x3_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_purple"
        android:text="@string/_3x3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/leaderboard_4x4_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/_4x4"
        app:layout_constraintEnd_toStartOf="@+id/leaderboard_5x5_button"
        app:layout_constraintStart_toEndOf="@+id/leaderboard_3x3_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/leaderboard_5x5_button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/_5x5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/leaderboard_1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border_rectangle_radius_for_text"
        android:textColor="#DD000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_3x3_button" />

    <TextView
        android:id="@+id/leaderboard_1_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/border_rectangle_radius_for_text"
        android:textColor="#DD000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/leaderboard_1_text"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_3x3_button" />

    <TextView
        android:id="@+id/leaderboard_2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_rectangle_radius_for_text"
        android:textColor="#DD000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_1_text" />

    <TextView
        android:id="@+id/leaderboard_2_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_rectangle_radius_for_text"
        android:textColor="#DD000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/leaderboard_2_text"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_1_time" />

    <TextView
        android:id="@+id/leaderboard_3_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_rectangle_radius_for_text"
        android:textColor="#DD000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_2_text" />

    <TextView
        android:id="@+id/leaderboard_3_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_rectangle_radius_for_text"
        android:textColor="#DD000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/leaderboard_3_text"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_2_time" />

    <TextView
        android:id="@+id/leaderboard_4_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_rectangle_radius_for_text"
        android:textColor="#DD000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_3_text" />

    <TextView
        android:id="@+id/leaderboard_4_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_rectangle_radius_for_text"
        android:textColor="#DD000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/leaderboard_4_text"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_3_time" />

    <TextView
        android:id="@+id/leaderboard_5_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_rectangle_radius_for_text"
        android:textColor="#DD000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_4_text" />

    <TextView
        android:id="@+id/leaderboard_5_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_rectangle_radius_for_text"
        android:textColor="#DD000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/leaderboard_5_text"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_4_time" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/border_rectangle_radius_for_text"
        android:text="In this leaderboard you can see\n5 best record for each category"
        android:textColor="#DD000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>